# advent-of-code-2022

./: .gitignore  advent-of-code.cabal  day1.hs
app/Day1/: Ex.hs
app/Day10/: Ex.hs
app/Day2/: Ex.hs
app/Day3/: Ex.hs
app/Day4/: Ex.hs
app/Day5/: Ex.hs
app/Day6/: Ex.hs
app/Day7/: Ex.hs
app/Day8/: Ex.hs
app/Day9/: Ex.hs
