cabal-version:      2.4
name:               advent-of-code
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Vincent Quillien
maintainer:         vincent.quillien@shine.fr

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable advent-of-code
    main-is: day1.hs
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.16.1.0,
        split ^>=0.2.0.0
    hs-source-dirs:   .
    default-language: Haskell2010
