cabal-version:      2.4
name:               advent-of-code
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Vincent Quillien
maintainer:         vincent.quillien@shine.fr

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable advent-of-code
    main-is: Main.hs
    -- Modules included in this executable, other than Main.
    other-modules: 
        Day1.Ex
        Day2.Ex
        Day3.Ex
        Day4.Ex
        Day5.Ex
        Day6.Ex
        Day7.Ex
        Day8.Ex
        Day9.Ex
        Day10.Ex

    extensions:
        RecordWildCards
    ghc-options:
        -fwarn-incomplete-patterns

    build-depends:
        base ^>=4.16.1.0,
        split ^>=0.2.0.0,
        containers ^>=0.6.6,
        ilist ^>=0.4.0.1,
        lens ^>=5.2,
        matrix ^>=0.3.6.1
    hs-source-dirs: 
        app
    default-language: Haskell2010
